W6: Added user mangement
